# glsb

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  conanfile.txt  index.md
cmake/: build_type.cmake  compiler_warnings.cmake  init_conan.cmake
res/: flat.frag.glsl  flat.vert.glsl  frag.glsl  vert.glsl
src/: CMakeLists.txt  application.h  buffer.h  input.h  layer.h  main.cpp  mesh.h  renderer.h  scene.h  shader.cpp  shader.h  texture.h  utils.h
src/imgui/: imgui_glfw.cpp  imgui_glfw.h  imgui_ogl3.cpp  imgui_ogl3.h
src/vulkan/: core.h  pch.h
tests/: CMakeLists.txt  tests_dummy.cpp
